--- a/index.html
+++ b/index.html
@@ -35,17 +35,7 @@
             height: 100vh; /* Mantém a primeira seção com altura total da tela */
         }
 
-        .section-1::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 1) 100%);
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
-            z-index: 1;
-        }
+   
 
         /* Segunda seção com imagem e ofuscamento */
         .section-2 {
@@ -138,7 +128,7 @@
 
         .card img {
             width: 100%;
-            height: 200px;
+            height: 280px;
             object-fit: cover;
         }
 
@@ -235,7 +225,7 @@
             <div class="servicos-grid">
               <!-- Card 1: Extensão de Cílios -->
               <div class="card">
-                <img src="img/cilios.png" alt="Extensão de Cílios">
+                <img src="img/Home.png" alt="Extensão de Cílios">
               </div>
 
               <!-- Card 3: Design de Sobrancelhas -->
