--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -295,17 +295,17 @@ h3 {
   
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline>
           <source src="img/slide1.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline>
           <source src="img/slide2.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline>
           <source src="img/slide3.mp4" type="video/mp4">
         </video>
       </div>
@@ -380,6 +380,13 @@ h3 {
   imagens.forEach(img => {
       observer.observe(img);
   });
+
+  document.addEventListener("DOMContentLoaded", function() {
+    document.querySelectorAll(".swiper-slide video").forEach(video => {
+        video.play().catch(error => console.log("Autoplay bloqueado:", error));
+    });
+});
+
 </script>
 
 </body>
