--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -295,17 +295,17 @@ h3 {
   
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <video autoplay loop muted playsinline>
+        <video  loop muted playsinline>
           <source src="videos/slide1.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video autoplay loop muted playsinline>
+        <video  loop muted playsinline>
           <source src="videos/slide2.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video autoplay loop muted playsinline>
+        <video  loop muted playsinline>
           <source src="videos/slide3.mp4" type="video/mp4">
         </video>
       </div>
