--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -295,17 +295,17 @@ h3 {
   
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <video  loop muted playsinline>
+        <video   autoplay muted loop playsinline>
           <source src="videos/slide1.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video  loop muted playsinline>
+        <video  autoplay muted loop playsinline>
           <source src="videos/slide2.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
-        <video  loop muted playsinline>
+        <video  autoplay muted loop playsinline>
           <source src="videos/slide3.mp4" type="video/mp4">
         </video>
       </div>
@@ -399,7 +399,24 @@ document.addEventListener("DOMContentLoaded", function() {
       });
   });
 });
+var slideIndex = 1;
+showSlides(slideIndex);
 
+// Next/previous controls
+function passaSlide(n) {
+  showSlides(slideIndex += n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.querySelector(".mySlideVideo");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  slides[slideIndex-1].style.display = "block";
+}
 </script>
 
 </body>
