--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -214,7 +214,7 @@
 
 /* Estilo base para as imagens */
 .img-canto {
-  max-width: 200px; /* Ajuste o tamanho das imagens */
+  max-width: 270px; /* Ajuste o tamanho das imagens */
   height: auto;
   opacity: 0; /* Inicialmente invisível */
   transform: translateY(20px); /* Desloca as imagens para baixo */
@@ -308,6 +308,7 @@ h3 {
         <video  autoplay muted loop playsinline>
           <source src="videos/slide3.mp4" type="video/mp4">
         </video>
+        
       </div>
     </div>
   
@@ -344,10 +345,10 @@ h3 {
 </div>
 <div class="imagens-cantos">
   <img src="img/img1.png.png" class="img-canto img1">
-  <img src="img/img2.png.png" class="img-canto img2">
-  <img src="img/img3.png.png" class="img-canto img3">
-  <img src="img/img4.png.png" class="img-canto img4">
-  <img src="img/img5.png.png" class="img-canto img5">
+  <img src="img/img2.png" class="img-canto img2">
+  <img src="img/img3.png" class="img-canto img3">
+  <img src="img/img4.png" class="img-canto img4">
+  <img src="img/5-removebg-preview.png" class="img-canto img5">
 </div>
 
 
