--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -19,6 +19,8 @@
         }
 
         html, body {
+          background-color:#fff0f5; /* Cor rosa */
+          ;
           margin: 0; /* Remove a margem padrão */
           padding: 0; /* Remove o padding padrão */
           width: 100%;
@@ -94,7 +96,7 @@
         .content {
             width: 100%;
             min-height: 100vh;
-            background: #ffffff;
+            background: #fff0f5;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -257,9 +259,7 @@ h3 {
   text-align: center; /* Centralizar texto */
   margin: 20px 0; /* Espaçamento externo */
   padding: 10px; /* Espaçamento interno */
-  background-color: #fff0f5; /* Fundo rosa claro */
   border-radius: 10px; /* Bordas arredondadas */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
   display: inline-block; /* Ajusta o tamanho ao conteúdo */
 }
         
