--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -19,7 +19,7 @@
         }
 
         html, body {
-          background-color:#fff0f5; /* Cor rosa */
+          background-color:#ffffff; /* Cor rosa */
           ;
           margin: 0; /* Remove a margem padrão */
           padding: 0; /* Remove o padding padrão */
@@ -96,7 +96,7 @@
         .content {
             width: 100%;
             min-height: 100vh;
-            background: #fff0f5;
+            background: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: center;
