--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -327,9 +327,9 @@ h3 {
     <h2>Descubra a técnica perfeita para o seu olhar</h2>
     
     <picture>
-        <source media="(max-width: 750px)" srcset="img/teste2.jpg">
-        <source media="(max-width: 1050px)" srcset="img/teste2.jpg">
-        <img src="img/teste2.jpg" alt="Imagens flexíveis">
+        <source media="(max-width: 750px)" srcset="img/Product Catalog Booklet.zip - 1 2.png">
+        <source media="(max-width: 1050px)" srcset="img/Product Catalog Booklet.zip - 1 2.png">
+        <img src="img/Product Catalog Booklet.zip - 1 2.png" alt="Imagens flexíveis">
     </picture>
     <br><h2>O Melhor das Tendências Internacionais para Você</h2> 
 
