--- a/designsombracelha.html
+++ b/designsombracelha.html
@@ -283,21 +283,21 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="img/design-sombracelha.png" alt="Design de Sobrancelhas 1">
+                <img src="img/IMG_8187.JPG" alt="Design de Sobrancelhas 1">
                 <div class="slide-text">
                     <h1>Design de Sobrancelhas</h1>
                     <p>Realce sua beleza natural</p>
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="img/sobrancelha2.jpg" alt="Design de Sobrancelhas 2">
+                <img src="img/sombracellha4.jpg" alt="Design de Sobrancelhas 2">
                 <div class="slide-text">
                     <h1>Precisão e Harmonia</h1>
                     <p>Resultados que encantam</p>
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="img/sobrancelha3.jpg" alt="Design de Sobrancelhas 3">
+                <img src="img/IMG_8186.jpg" alt="Design de Sobrancelhas 3">
                 <div class="slide-text">
                     <h1>Agende já!</h1>
                     <p>Transforme seu olhar</p>
@@ -314,17 +314,7 @@
         <img src="img/sombracelha.png" alt="Design de Sobrancelhas">
     </div>
 
-    <div class="depoimentos">
-        <h2>Depoimentos</h2>
-        <div class="card">
-            <p>"Adorei o resultado! Minhas sobrancelhas ficaram perfeitas."</p>
-            <span>- Maria Silva</span>
-        </div>
-        <div class="card">
-            <p>"Profissional incrível e muito atenciosa. Recomendo!"</p>
-            <span>- João Santos</span>
-        </div>
-    </div>
+    
 
     <footer>
         <div class="footer-content">
