--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             </div>
             <!-- Card 2 -->
             <div class="card">
-                <a href=""><h3>Design de Sobrancelhas</h3></a>
+                <a href="designsombracelha.html"><h3>Design de Sobrancelhas</h3></a>
             </div>
             <!-- Card 3 -->
             <div class="card">
