--- a/designsombracelha.html
+++ b/designsombracelha.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poiret+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="style3.css">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poiret+One&display=swap" rel="stylesheet">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Merienda:wght@300..900&family=Quicksand:wght@300..700&display=swap');
     </style>
@@ -166,12 +174,7 @@
             gap: 10px;
         }
 
-        .logo {
-            font-family: "Poiret One", sans-serif;
-            font-size: 2.5rem;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
+     
 
         header {
             background: rgba(0, 0, 0, 0.8);
@@ -266,16 +269,18 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><div class="logo">Cibelly Lash</div> </a>
+            <a href="index.html" style="text-decoration: none;">
+                <div class="logo">Cibelly Lash</div>
+            </a>            <!-- Ícone do menu hambúrguer -->
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="nav-list" id="nav-list">
-                <li><a href="#hero">Início</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html">Serviços</a></li>
+                <li><a href="index.html">Contato</a></li>
             </ul>
         </nav>
     </header>
