--- a/index.html
+++ b/index.html
@@ -88,18 +88,17 @@
      <section class="servicos" id="servicos">
         <h2>Nossos Serviços</h2>
         <div class="servicos-grid">
-            <p>Descubra nossos tratamentos exclusivos</p>
             <div class="divider"></div>
         </div>
             <!-- Card 1 -->
             <div class="card">
                 
                 <a href="extensao-cilios.html"><h3>Extensão de Cílios</h3></a>
-            </div>
+            </div><br>
             <!-- Card 2 -->
             <div class="card">
                 <a href="designsombracelha.html"><h3>Design de Sobrancelhas</h3></a>
-            </div>
+            </div><br>
             <!-- Card 3 -->
             <div class="card">
                 <h3>Unhas</h3>
