--- a/extensao-cilios.html
+++ b/extensao-cilios.html
@@ -305,18 +305,15 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <video autoplay muted loop playsinline>
-                    <source src="videos/slide1.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="swiper-slide">
                 <video autoplay muted loop playsinline>
-                    <source src="videos/slide2.mp4" type="video/mp4">
+                    <source src="videos/WhatsApp Video 2025-04-05 at 19.23.40.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="swiper-slide">
-                <video autoplay muted loop playsinline>
-                    <source src="videos/slide3.mp4" type="video/mp4">
-                </video>
+            
             </div>
         </div>
         <div class="slide-text">
