--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div><br>
             <!-- Card 3 -->
             <div class="card">
-                <h3>Unhas</h3>
+                <a href="unhas.html"><h3>Unhas</h3></a>
             </div>
         </div>
     </section>
